portfolio/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: portfolio
  labels:
    app.kubernetes.io/part-of: altair-portfolio
    istio-injection: enabled
