portfolio/base/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: portfolio
  namespace: portfolio
spec:
  hosts:
    - "yedressov.com"
  gateways:
    - istio-ingress/main-gateway
  http:
    - match:
        - headers:
            x-forwarded-proto:
              exact: http
      redirect:
        scheme: https
        redirectCode: 301
    - match:
        - uri:
            prefix: /api
      route:
        - destination:
            host: portfolio-api
            port:
              number: 8000
    - route:
        - destination:
            host: portfolio-frontend
            port:
              number: 3000
